--- a/style.css
+++ b/style.css
@@ -59,3 +59,16 @@
         margin-top: 10px;
     }
 }
+/* Homo logo  */
+
+.homologo {
+    max-height: 600px;
+    max-width: 100vw; 
+
+}
+.side-bar {
+    min-height: 1000px;
+    max-width: 200px;
+    background-color: rgb(238, 230, 230);
+    position: absolute;
+}
