--- a/style.css
+++ b/style.css
@@ -59,13 +59,52 @@
         margin-top: 10px;
     }
 }
-/* Homo logo  */
+/* Home logo  */
 
-.homologo {
-    max-height: 600px;
-    max-width: 100vw; 
-
+/* .main {
+    position: relative;
+    width: 100%;
+    min-height: auto;
+  }
+  
+  .homologo {
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 100vw; 
+    height: auto;
+    object-fit: cover;
+    z-index: 1;
+    display: block;
+  }
+  
+  .homecontent {
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    transition: 0.6s;
+    margin-top: 332px;
+    padding: 80px;
+    transform: translateY(-50%);
+    z-index: 2;
+    color: white;
+    font-size: 2rem;
+    background: rgba(0, 0, 0, 0.5); 
+    width: 100%; 
+    height: 100%;
+  } */
+  
+.info-button {
+    position: relative;
+    margin: 20px;
+    justify-content: space-around;
 }
+
 .side-bar {
     min-height: 1000px;
     max-width: 200px;
