--- a/style.css
+++ b/style.css
@@ -60,9 +60,11 @@
     }
 }
 /* navbar links    */
-.info-item {
+.container-fluid.info-button {
     position: relative;
-    margin: 20px;
+    /* margin: 15px; */
+    border: 1px solid #ddd;
+    box-shadow: 0 2px 4px rgba(48, 47, 47, 0.1);
 }
 .nav {
     margin-right: 20px;
@@ -71,27 +73,40 @@
 
 /* Main shooping  */
 
-.main {
-    margin-top: 20px;
+.container-fluid.main {
     display: flex;
-    padding-left: 200px;
+    align-items: flex-start;
+    background-color: rgba(221, 224, 219, 0.322);
 }
-.side-bar {
-    position: fixed;
-    min-width: 200px;
-    height: 100vh;
-    background-color: #107eec;
-    left: 0;
-    top: 0;
-    padding-left: 0;
-    padding-right: 10px;
-    border-right: 1px solid #ccc;
+.container-fluid.main.side-bar {
+    border-radius: 2px;
 }
-.row {
-    flex: 1;
-    margin-left: 280px; 
+.row.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: 0;  
+}
+.col-3 {
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding: 0;
 }
 
+.card {
+    margin-bottom: 15px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ddd;
+}
+.card-img-top{
+    width: 100%;
+    height: auto;
+    aspect-ratio: 3/2;
+    object-fit: contain;
+    margin-top: 8px;
+}
+
+/* Cards */
 @media (max-width: 1030px) {
     .col-3 {
         flex: 0 0 48%; 
